@@ -38,6 +38,7 @@ lib/mechanize/headers.rb
 lib/mechanize/history.rb
 lib/mechanize/http.rb
 lib/mechanize/http/agent.rb
+lib/mechanize/http/auth_challenge.rb
 lib/mechanize/inspect.rb
 lib/mechanize/monkey_patch.rb
 lib/mechanize/page.rb
@@ -150,6 +151,7 @@ test/test_mechanize_form_field.rb
 test/test_mechanize_form_image_button.rb
 test/test_mechanize_form_textarea.rb
 test/test_mechanize_http_agent.rb
+test/test_mechanize_http_auth_challenge.rb
 test/test_mechanize_link.rb
 test/test_mechanize_page_encoding.rb
 test/test_mechanize_page_link.rb
