@@ -712,6 +712,7 @@ require 'mechanize/form'
 require 'mechanize/history'
 require 'mechanize/http'
 require 'mechanize/http/agent'
+require 'mechanize/http/auth_challenge'
 require 'mechanize/page'
 require 'mechanize/inspect'
 require 'mechanize/monkey_patch'
